#37 - Added stage that filters documents based on the text score